fix post width on small screen

--- a/src/css/Post.css
+++ b/src/css/Post.css
@@ -1,4 +1,10 @@
 .post_card {
-    width: 70%;
-    margin: 0 auto;
+    width: 100%;
+}
+
+@media (min-width: 700px) {
+    .post_card {
+        width: 70%;
+        margin: 0 auto;
+    }
 }
